--- a/include/css/header.css
+++ b/include/css/header.css
@@ -1,10 +1,18 @@
+fieldset {
+	border-style:none;
+}
 #f_group {
-        border-width:2px;
-        border-color:gray;
+        border-width:1px;
+        border-color:#D9D9D9;
+//	background-color:#FAFAFA;
+	margin:0;
+	border-style:none;
+	border-bottom-style:solid;
 }
 
 .current {
-	background-color:green;
+	background-color:#FFA00A;
+	
 	color:white;
 }
 
@@ -24,24 +32,74 @@
 	margin:0 3% 0 0;
 	background-color:green;
 	color:white;
-	height:24px;
-	line-height:23px;
+	//height:24px;
+	//line-height:23px;
+	text-align:center;
+	font:normal;
+	background:url("../images/btn_p.png") no-repeat;
+	background-position:-133px -50px;
+	width:82;
+	height:30px;
+	display:inline-block;
+	outline-style:none;
 }
-#add_algo a {
-	color:white;
+#add_algo:hover  {
+	background-position:-217px -50px;
 }
 
-#week_star {
-        border-width:2px;
-        //border-color:gray;
+.week_rank {
+        border-width:1px;
+        border-color:#E3E3E3;
+//	background-color:#F2F2F2;
+	border-left-style:none;
+	border-right-style:solid;
+	border-right-width:2px;
+	border-bottom-style:solid;
+	margin:0;
+	padding:0 4px 0 0;
+}
+#left_rank span {
+	font-size:24px;
+	color:#E64141;
+}
+#week_worst span {
+	font-size:24px;
+	color:#2b2b2b;
+}
+#week_best {
+	background-image:url("../images/best_bg.png");
+	background-repeat:no-repeat;
+	height:110px;
+}
+#week_worst {
+	border-bottom-width:2px;
+	background-image:url("../images/worst_bg.jpg");
+	background-repeat:no-repeat;
+	height:100%;
+	margin:4px 0 ;
 }
 
-.dl_rank dt {
+.week_rank .dl_rank dt {
 	float:left;
 	font-size:28px;
-	color:red;
+	color:#005015;
+	margin:0 0 0 4px;
 }
 
-.dl_rank dt a img {
-	width:140px;
+#week_best  img {
+	width:125px;
+	height:70px;
+	position:relative;
+	top:20px;
+	left:11px;
+}
+#week_worst  img {
+	width:118px;
+	height:80px;
+	position:relative;
+	top:42px;
+	left:14px;
+}
+.week_rank .dl_rank dd a img {
+	width:50px;
 }
