--- a/include/css/content.css
+++ b/include/css/content.css
@@ -62,8 +62,6 @@ fieldset {
         border-color:#E3E3E3;
 	background-color:#F2F2F2;
 	border-left-style:none;
-	border-right-style:solid;
-	border-right-width:2px;
 	border-bottom-style:solid;
 	margin:0;
 	padding:0 4px 0 0;
@@ -89,10 +87,20 @@ fieldset {
 }
 .week_best_div
 {
+	position:relative;
 	margin:0px;
 	padding:0px;
-	width:100%;
-	height:180px;
+	width:150px;
+	height:150px;
+	border-width:1px;
+        border-color:#E3E3E3;
+	background-color:#F2F2F2;
+	border-top-style:solid;	
+	border-left-style:none;
+	border-bottom-style:solid;
+	margin:0;
+	padding:0 4px 0 0;
+
 }
 #week_best_span
 {
@@ -106,10 +114,29 @@ fieldset {
 	color:rgb(88,88,88);
 	font-weight:bold;
 }
+#week_best  img {
+	width:80px;
+	height:80px;
+	position:relative;
+	top:10px;
+	left:12px;
+	border-radius:10px;
+}
+#week_worst  img {
+	width:80px;
+	height:80px;
+	position:relative;
+	top:10px;
+	left:12px;
+	border-radius:10px;
+}
 #week_best
 {
-	width:95%;
-	height:145px;
+	position:relative;
+	left:25px;
+	top:10px;
+	width:100px;
+	height:100px;
 	border-radius:10px;
 	border-width:1px;
         border-color:#E3E3E3;
@@ -121,13 +148,13 @@ fieldset {
 	margin:0;
 	padding:0 4px 0 0;
 	-webkit-animation-name: redPulse;
-	-webkit-animation-duration: 2s;
+	-webkit-animation-duration: 1s;
 	-webkit-animation-iteration-count: infinite;
 }
 @-webkit-keyframes redPulse {
-	from { background-color: rgb(255,6,6); -webkit-box-shadow: 0 0 9px #333; }
+	from { background-color: rgb(255,0,0); -webkit-box-shadow: 0 0 9px #333; }
 	50% { background-color: rgb(198,64,64); -webkit-box-shadow: 0 0 18px rgb(198,64,64); }
-	to { background-color: rgb(255,6,6); -webkit-box-shadow: 0 0 9px #333; }
+	to { background-color: rgb(255,0,0); -webkit-box-shadow: 0 0 9px #333; }
 }
 @-webkit-keyframes blackPulse {
 from { background-color: #000; -webkit-box-shadow: 0 0 9px #333; }
@@ -137,8 +164,11 @@ to { background-color: #000; -webkit-box-shadow: 0 0 9px #333; }
 
 
 #week_worst {
-	width:95%;
-	height:145px;
+	position:relative;
+	left:25px;
+	top:10px;
+	width:100px;
+	height:100px;
 	border-radius:10px;
 	border-width:1px;
         border-color:#E3E3E3;
@@ -149,7 +179,7 @@ to { background-color: #000; -webkit-box-shadow: 0 0 9px #333; }
 	border-bottom-style:solid;
 	margin:4px 0 ;
 	-webkit-animation-name: blackPulse;
-	-webkit-animation-duration: 2s;
+	-webkit-animation-duration: 1s;
 	-webkit-animation-iteration-count: infinite;	
 }
 .week_rank .dl_rank dt {
@@ -157,23 +187,6 @@ to { background-color: #000; -webkit-box-shadow: 0 0 9px #333; }
 	font-size:28px;
 	color:#005015;
 	margin:0 0 0 4px;
-}
-
-#week_best  img {
-	width:100px;
-	height:100px;
-	position:relative;
-	top:24px;
-	left:23px;
-	border-radius:10px;
-}
-#week_worst  img {
-	width:100px;
-	height:100px;
-	position:relative;
-	top:24px;
-	left:23px;
-	border-radius:10px;
 }
 .week_rank .dl_rank dd a img {
 	width:50px;
