fix Rank css. fix acRate=0;img round

--- a/include/css/index.css
+++ b/include/css/index.css
@@ -62,4 +62,16 @@ a:hover {
 
 .fixbug {
 	clear:both;
+
 }
+
+.round1 {
+	border-radius:4px;
+}
+.round2 {
+	/*border-radius:6px;*/
+}
+.round3 {
+	border-radius:10px;
+}
+
