--- a/include/css/content.css
+++ b/include/css/content.css
@@ -71,6 +71,7 @@ fieldset {
 {
 	font-family: Arial Rounded MT Bold;
 	background-color:#f1f1f1;
+	min-height:750px;
 }
 .week_rank_title
 {
@@ -126,7 +127,7 @@ fieldset {
 	width:80px;
 	height:80px;
 	position:relative;
-	top:10px;
+	/*top:10px;*/
 	left:12px;
 	border-radius:10px;
 }
@@ -168,7 +169,7 @@ to { background-color: #000; -webkit-box-shadow: 0 0 9px #333; }
 	left:25px;
 	top:10px;
 	width:100px;
-	height:100px;
+	/*height:100px;*/
 	border-radius:10px;
 	border-width:1px;
         border-color:#E3E3E3;
@@ -181,6 +182,7 @@ to { background-color: #000; -webkit-box-shadow: 0 0 9px #333; }
 	-webkit-animation-name: blackPulse;
 	-webkit-animation-duration: 1s;
 	-webkit-animation-iteration-count: infinite;	
+	padding :10px 0;
 }
 .week_rank .dl_rank dt {
 	float:left;
